@@ -6,7 +6,7 @@
 import { __ } from '@wordpress/i18n';
 
 export const decimalCurrencyRoundingOptions = {
-	none: __( 'None', 'woocommerce-payments' ),
+	'0': __( 'None', 'woocommerce-payments' ),
 	'0.25': '0.25',
 	'0.50': '0.50',
 	'1.00': '1.00 (recommended)',
