@@ -99,7 +99,7 @@ const SingleCurrencySettings = () => {
 				currencySettings[ currency ].manual_rate || initialManualRate
 			);
 			setPriceRoundingType(
-				currencySettings[ currency ].price_rounding ||
+				currencySettings[ currency ].price_rounding ??
 					initialPriceRoundingType
 			);
 			setPriceCharmType(
@@ -373,13 +373,9 @@ const SingleCurrencySettings = () => {
 											</h4>
 											{ /* eslint-disable jsx-a11y/no-onchange */ }
 											<select
-												value={
-													'none' === priceRoundingType
-														? 'none'
-														: parseFloat(
-																priceRoundingType
-														  )
-												}
+												value={ parseFloat(
+													priceRoundingType
+												) }
 												data-testid={ 'price_rounding' }
 												onChange={ ( event ) =>
 													setPriceRoundingType(
@@ -393,13 +389,9 @@ const SingleCurrencySettings = () => {
 												).map( ( value ) => {
 													return (
 														<option
-															value={
-																'none' === value
-																	? value
-																	: parseFloat(
-																			value
-																	  )
-															}
+															value={ parseFloat(
+																value
+															) }
 															key={ value }
 														>
 															{
