@@ -171,7 +171,7 @@ class Currency implements \JsonSerializable {
 	 * @return string Rounding rate.
 	 */
 	public function get_rounding(): string {
-		return is_null( $this->rounding ) ? 'none' : $this->rounding;
+		return $this->rounding ?? '0';
 	}
 
 	/**
