@@ -13,6 +13,7 @@
 * Fix - Missing customer information after guest checkout via Checkout Block.
 * Fix - Show correct payment method name during checkout using upe methods.
 * Update - display fees per payment method on overview page.
+* Fix - Multi-Currency settings rounding option and preview.
 
 = 3.1.0 - 2021-10-06 =
 * Fix - Issue affecting analytics for Multi-Currency orders made with a zero-decimal to non-zero decimal conversion.
